--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href=https://flatironschool.com </a><!-- Write your HTML in this file -->
+<a href="https://flatironschool.com"></a> </a><!-- Write your HTML in this file -->
